Improve AVDACodecAllocator traces.

This ensures we have traces for creation and deletion. This ensures
we have the following traces:
- CodecAllocator::CreateMediaCodec
- CodecAllocator::DeleteMediaCodec

Whenever a codec is created or destroyed. Previously there was no
trace for when the codec is deleted. This should help find destruction
hangs.

This also renames one method which is only used in tests to have the
ForTesting suffix.

BUG=883620
TEST=none
R=liberato

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ic62b2a8b16a53c5dba0a1a914571873bf938156b
Reviewed-on: https://chromium-review.googlesource.com/1252907
Reviewed-by: Frank Liberato <liberato@chromium.org>
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595290}
Former-commit-id: 1318de357be0b44219023aa4aaf9ed8a36e9922f